--- a/main.css
+++ b/main.css
@@ -429,6 +429,11 @@ h1 {
     padding-top: 2rem;
   }
 }
+@media (min-width: 767px) and (max-width: 1000px) {
+  .body .body-top {
+    padding-bottom: 10rem;
+  }
+}
 .body .body-top .body-top-left {
   width: 90%;
   margin: 4rem auto;
